--- a/GameLogic/GameLogic.csproj
+++ b/GameLogic/GameLogic.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <RootNamespace>GameLogic</RootNamespace>
+	<GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-	<PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.507">
+	<PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.556">
 		<PrivateAssets>all</PrivateAssets>
 		<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	</PackageReference>
