--- a/GameServer/GameServer.csproj
+++ b/GameServer/GameServer.csproj
@@ -6,6 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <RootNamespace>GameServer</RootNamespace>
+	<Authors>KN inIT</Authors>
+	<Title>MonoTanks Server</Title>
+	<Description>A server for MonoTanks game.</Description>
   </PropertyGroup>
 
   <ItemGroup>
@@ -21,7 +24,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.507">
+    <PackageReference Include="CommandLineParser" Version="2.9.1" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.556">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
