Add Hackaton build configuration

--- a/GameLogic/GameLogic.csproj
+++ b/GameLogic/GameLogic.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
     <RootNamespace>GameLogic</RootNamespace>
 	<GenerateDocumentationFile>true</GenerateDocumentationFile>
+	<Configurations>Debug;Release</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
