--- a/GameClient/GameClient_Linux.csproj
+++ b/GameClient/GameClient_Linux.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
@@ -8,6 +8,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Nullable>enable</Nullable>
     <RootNamespace>GameClient</RootNamespace>
+	<Configurations>Debug;Release;HackatonDebug;HackatonRelease</Configurations>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -16,8 +17,20 @@
     <OutputPath>bin\$(Configuration)Linux\</OutputPath>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='HackatonDebug|AnyCPU'">
+    <DefineConstants>DEBUG;HACKATON;CLIENT;LINUX</DefineConstants>
+    <PlatformTarget>x64</PlatformTarget>
+    <OutputPath>bin\$(Configuration)Linux\</OutputPath>
+  </PropertyGroup>
+
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DefineConstants>RELEASE;CLIENT;LINUX</DefineConstants>
+    <PlatformTarget>x64</PlatformTarget>
+    <OutputPath>bin\$(Configuration)Linux\</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='HackatonRelease|AnyCPU'">
+    <DefineConstants>RELEASE;HACKATON;CLIENT;LINUX</DefineConstants>
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\$(Configuration)Linux\</OutputPath>
   </PropertyGroup>
