--- a/GameClient/GameClient_Windows.csproj
+++ b/GameClient/GameClient_Windows.csproj
@@ -11,6 +11,7 @@
     <Nullable>enable</Nullable>
     <RootNamespace>GameClient</RootNamespace>
 	<GenerateDocumentationFile>true</GenerateDocumentationFile>
+	<Configurations>Debug;Release;HackatonDebug;HackatonRelease</Configurations>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -19,8 +20,20 @@
     <OutputPath>bin\$(Configuration)Windows\</OutputPath>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='HackatonDebug|AnyCPU'">
+    <DefineConstants>DEBUG;HACKATON;CLIENT;WINDOWS</DefineConstants>
+    <PlatformTarget>x64</PlatformTarget>
+    <OutputPath>bin\$(Configuration)Windows\</OutputPath>
+  </PropertyGroup>
+
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DefineConstants>RELEASE;CLIENT;WINDOWS</DefineConstants>
+    <PlatformTarget>x64</PlatformTarget>
+    <OutputPath>bin\$(Configuration)Windows\</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='HackatonRelease|AnyCPU'">
+    <DefineConstants>RELEASE;HACKATON;CLIENT;WINDOWS</DefineConstants>
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\$(Configuration)Windows\</OutputPath>
   </PropertyGroup>
