--- a/GameServer/GameServer.csproj
+++ b/GameServer/GameServer.csproj
@@ -33,7 +33,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='HackatonRelease|AnyCPU'">
     <DefineConstants>RELEASE;HACKATON;SERVER</DefineConstants>
     <PlatformTarget>x64</PlatformTarget>
-    <OutputPath>bin\$(Configuration)Windows\</OutputPath>
+    <OutputPath>bin\$(Configuration)\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
