--- a/GameClient/GameClient_Linux.csproj
+++ b/GameClient/GameClient_Linux.csproj
@@ -8,7 +8,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Nullable>enable</Nullable>
     <RootNamespace>GameClient</RootNamespace>
-	<Configurations>Debug;Release;HackatonDebug;HackatonRelease</Configurations>
+	<Configurations>Debug;Release;HackathonDebug;HackathonRelease</Configurations>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -17,8 +17,8 @@
     <OutputPath>bin\$(Configuration)Linux\</OutputPath>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='HackatonDebug|AnyCPU'">
-    <DefineConstants>DEBUG;HACKATON;CLIENT;LINUX</DefineConstants>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='HackathonDebug|AnyCPU'">
+    <DefineConstants>DEBUG;Hackathon;CLIENT;LINUX</DefineConstants>
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\$(Configuration)Linux\</OutputPath>
   </PropertyGroup>
@@ -29,8 +29,8 @@
     <OutputPath>bin\$(Configuration)Linux\</OutputPath>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='HackatonRelease|AnyCPU'">
-    <DefineConstants>RELEASE;HACKATON;CLIENT;LINUX</DefineConstants>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='HackathonRelease|AnyCPU'">
+    <DefineConstants>RELEASE;Hackathon;CLIENT;LINUX</DefineConstants>
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\$(Configuration)Linux\</OutputPath>
   </PropertyGroup>
