--- a/GameClient/GameClient_Linux.csproj
+++ b/GameClient/GameClient_Linux.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
@@ -12,25 +12,25 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>DEBUG;CLIENT;LINUX</DefineConstants>
+    <DefineConstants>$(DefineConstants);DEBUG;CLIENT;LINUX</DefineConstants>
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\$(Configuration)Linux\</OutputPath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='HackathonDebug|AnyCPU'">
-    <DefineConstants>DEBUG;Hackathon;CLIENT;LINUX</DefineConstants>
+    <DefineConstants>$(DefineConstants);DEBUG;HACKATHON;CLIENT;LINUX</DefineConstants>
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\$(Configuration)Linux\</OutputPath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DefineConstants>RELEASE;CLIENT;LINUX</DefineConstants>
+    <DefineConstants>$(DefineConstants);RELEASE;CLIENT;LINUX</DefineConstants>
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\$(Configuration)Linux\</OutputPath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='HackathonRelease|AnyCPU'">
-    <DefineConstants>RELEASE;Hackathon;CLIENT;LINUX</DefineConstants>
+    <DefineConstants>$(DefineConstants);RELEASE;HACKATHON;CLIENT;LINUX</DefineConstants>
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\$(Configuration)Linux\</OutputPath>
   </PropertyGroup>
@@ -70,15 +70,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GameLogic\GameLogic.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="FreeTypeSharp">
-      <HintPath>Libraries\FreeTypeSharp.dll</HintPath>
-    </Reference>
-    <Reference Include="MonoRivUI">
-      <HintPath>Libraries\MonoRivUI\MonoRivUI\bin\Debug\net6.0\MonoRivUI.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
   <ItemGroup>
