--- a/GameClient/GameClient_Windows.csproj
+++ b/GameClient/GameClient_Windows.csproj
@@ -16,25 +16,25 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>DEBUG;CLIENT;WINDOWS</DefineConstants>
+    <DefineConstants>$(DefineConstants);DEBUG;CLIENT;WINDOWS</DefineConstants>
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\$(Configuration)Windows\</OutputPath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='HackathonDebug|AnyCPU'">
-    <DefineConstants>DEBUG;HACKATHON;CLIENT;WINDOWS</DefineConstants>
+    <DefineConstants>$(DefineConstants);DEBUG;HACKATHON;CLIENT;WINDOWS</DefineConstants>
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\$(Configuration)Windows\</OutputPath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DefineConstants>RELEASE;CLIENT;WINDOWS</DefineConstants>
+    <DefineConstants>$(DefineConstants);RELEASE;CLIENT;WINDOWS</DefineConstants>
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\$(Configuration)Windows\</OutputPath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='HackathonRelease|AnyCPU'">
-    <DefineConstants>RELEASE;HACKATHON;CLIENT;WINDOWS</DefineConstants>
+    <DefineConstants>$(DefineConstants);RELEASE;HACKATHON;CLIENT;WINDOWS</DefineConstants>
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\$(Configuration)Windows\</OutputPath>
   </PropertyGroup>
