--- a/GameClient/GameClient_Linux.csproj
+++ b/GameClient/GameClient_Linux.csproj
@@ -26,12 +26,14 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DefineConstants>$(DefineConstants);RELEASE;CLIENT;LINUX</DefineConstants>
     <PlatformTarget>x64</PlatformTarget>
+	<Optimize>true</Optimize>
     <OutputPath>bin\$(Configuration)Linux\</OutputPath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='HackathonRelease|AnyCPU'">
     <DefineConstants>$(DefineConstants);RELEASE;HACKATHON;CLIENT;LINUX</DefineConstants>
     <PlatformTarget>x64</PlatformTarget>
+	<Optimize>true</Optimize>
     <OutputPath>bin\$(Configuration)Linux\</OutputPath>
   </PropertyGroup>
 
