--- a/GameServer/GameServer.csproj
+++ b/GameServer/GameServer.csproj
@@ -27,12 +27,14 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DefineConstants>$(DefineConstants);RELEASE;SERVER</DefineConstants>
     <PlatformTarget>x64</PlatformTarget>
+	<Optimize>true</Optimize>
     <OutputPath>bin\$(Configuration)\</OutputPath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='HackathonRelease|AnyCPU'">
     <DefineConstants>$(DefineConstants);RELEASE;HACKATHON;SERVER</DefineConstants>
     <PlatformTarget>x64</PlatformTarget>
+	<Optimize>true</Optimize>
     <OutputPath>bin\$(Configuration)\</OutputPath>
   </PropertyGroup>
 
