--- a/GameClient/GameClient_Linux.csproj
+++ b/GameClient/GameClient_Linux.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
 	<AssemblyName>GameClient</AssemblyName>
+	<AssemblyVersion>0.1.0.48</AssemblyVersion>
     <RootNamespace>GameClient</RootNamespace>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
