--- a/GameClient/GameClient_Windows.csproj
+++ b/GameClient/GameClient_Windows.csproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <AssemblyName>GameClient</AssemblyName>
-    <AssemblyVersion>0.1.0.48</AssemblyVersion>
+    <AssemblyVersion>0.1.1.*</AssemblyVersion>
+	<Deterministic>false</Deterministic>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
     <RollForward>Major</RollForward>
