Add Stereo configurations; change GameLogic to shared project

--- a/GameClient/GameClient_Windows.csproj
+++ b/GameClient/GameClient_Windows.csproj
@@ -15,12 +15,12 @@
     <RootNamespace>GameClient</RootNamespace>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <Platforms>x64;arm64</Platforms>
-	<Configurations>Debug;Release;HackathonDebug;HackathonRelease</Configurations>
+	<Configurations>Debug;Release;HackathonDebug;HackathonRelease;StereoDebug;StereoRelease</Configurations>
 	<EnableWindowsTargeting>true</EnableWindowsTargeting>
   </PropertyGroup>
 
   <PropertyGroup>
-    <DefineConstants>$(DefineConstants);CLIENT;WINDOWS</DefineConstants>
+    <DefineConstants>CLIENT;WINDOWS</DefineConstants>
     <OutputPath>bin\$(Configuration)\Windows\$(Platform)\</OutputPath>
   </PropertyGroup>
 
@@ -35,6 +35,10 @@
 
   <PropertyGroup Condition="$(Configuration.Contains('Hackathon'))">
     <DefineConstants>$(DefineConstants);HACKATHON</DefineConstants>
+  </PropertyGroup>
+  
+  <PropertyGroup Condition="$(Configuration.Contains('Stereo'))">
+    <DefineConstants>$(DefineConstants);STEREO</DefineConstants>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Platform)'=='x64'">
@@ -72,6 +76,7 @@
     <PackageReference Include="FreeTypeSharp" Version="3.0.0" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
     <PackageReference Include="MonoGame.Framework.WindowsDX" Version="3.8.1.303" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Nopipeline.Task" Version="2.2.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.556">
       <PrivateAssets>all</PrivateAssets>
@@ -79,10 +84,6 @@
     </PackageReference>
     <PackageReference Include="Svg.Skia" Version="2.0.0" />
     <PackageReference Include="System.Management" Version="8.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\GameLogic\GameLogic.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -104,4 +105,6 @@
     <Message Text="Restoring dotnet tools" Importance="High" />
     <Exec Command="dotnet tool restore" />
   </Target>
+
+  <Import Project="..\GameLogic\GameLogic.projitems" Label="Shared" />
 </Project>
