--- a/GameServer/GameServer_macOS.csproj
+++ b/GameServer/GameServer_macOS.csproj
@@ -10,8 +10,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Authors>KN init</Authors>
-    <Title>MonoTanks Server</Title>
-    <Description>A server for MonoTanks game.</Description>
+    <Title>MonoTanks/StereoTanks Server</Title>
+    <Description>A server for MonoTanks and StereoTanks.</Description>
     <Platforms>x64;arm64</Platforms>
     <Configurations>Debug;Release;HackathonDebug;HackathonRelease;StereoDebug;StereoRelease</Configurations>
   </PropertyGroup>
