--- a/GameClient/GameClient_Windows.csproj
+++ b/GameClient/GameClient_Windows.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <AssemblyName>GameClient</AssemblyName>
 	<AssemblyVersion>1.3.0.0</AssemblyVersion>
-	<Version>1.3.0-alpha.24</Version>
+	<Version>1.3.0-alpha.26</Version>
 	<Deterministic>false</Deterministic>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
@@ -17,6 +17,7 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <Platforms>x64;arm64</Platforms>
 	<Configurations>Debug;Release;HackathonDebug;HackathonRelease;StereoDebug;StereoRelease</Configurations>
+	<SatelliteResourceLanguages>en;fr;pl;ru</SatelliteResourceLanguages>
 	<EnableWindowsTargeting>true</EnableWindowsTargeting>
   </PropertyGroup>
 
@@ -27,7 +28,7 @@
   
   <PropertyGroup Condition="$(Configuration.Contains('Stereo'))">
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
-	<Version>1.0.0-alpha.24</Version>
+	<Version>1.0.0-alpha.26</Version>
 	<DefineConstants>$(DefineConstants);STEREO;HACKATHON</DefineConstants>
   </PropertyGroup>
 
@@ -102,6 +103,10 @@
 	<None Update="Content\Animations\**\*.svg">
 		<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	</None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Content\NewFolder\" />
   </ItemGroup>
 
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
