--- a/GameServer/GameServer_macOS.csproj
+++ b/GameServer/GameServer_macOS.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <AssemblyName>GameServer</AssemblyName>
 	<AssemblyVersion>1.3.0.0</AssemblyVersion>
-	<Version>1.3.0-alpha.24</Version>
+	<Version>1.3.0-alpha.26</Version>
 	<Deterministic>false</Deterministic>
     <RootNamespace>GameServer</RootNamespace>
     <OutputType>Exe</OutputType>
@@ -15,6 +15,7 @@
     <Description>A server for MonoTanks and StereoTanks.</Description>
     <Platforms>x64;arm64</Platforms>
     <Configurations>Debug;Release;HackathonDebug;HackathonRelease;StereoDebug;StereoRelease</Configurations>
+	<SatelliteResourceLanguages>en;fr;pl;ru</SatelliteResourceLanguages>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -24,7 +25,7 @@
   
   <PropertyGroup Condition="$(Configuration.Contains('Stereo'))">
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
-	<Version>1.0.0-alpha.24</Version>
+	<Version>1.0.0-alpha.26</Version>
 	<DefineConstants>$(DefineConstants);STEREO;HACKATHON</DefineConstants>
   </PropertyGroup>
   
