--- a/GameClient/GameClient_Windows.csproj
+++ b/GameClient/GameClient_Windows.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <AssemblyName>GameClient</AssemblyName>
 	<AssemblyVersion>1.3.0.0</AssemblyVersion>
-	<Version>1.3.0-alpha.31</Version>
+	<Version>1.3.0-beta.1</Version>
 	<Deterministic>false</Deterministic>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
@@ -28,7 +28,7 @@
   
   <PropertyGroup Condition="$(Configuration.Contains('Stereo'))">
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
-	<Version>1.0.0-alpha.31</Version>
+	<Version>1.0.0-beta.1</Version>
 	<DefineConstants>$(DefineConstants);STEREO;HACKATHON</DefineConstants>
   </PropertyGroup>
 
@@ -104,9 +104,9 @@
 		<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	</None>
   </ItemGroup>
-	
+  
   <ItemGroup>
-    <Content Include="Content\Shaders\AngleMask.mgfxo">
+    <Content Include="Content\Shaders\*.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
