--- a/GameClient/GameClient_macOS.csproj
+++ b/GameClient/GameClient_macOS.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
 	<AssemblyName>GameClient</AssemblyName>
 	<AssemblyVersion>1.3.0.0</AssemblyVersion>
-	<Version>1.3.0-alpha.31</Version>
+	<Version>1.3.0-beta.1</Version>
 	<Deterministic>false</Deterministic>
     <RootNamespace>GameClient</RootNamespace>
     <OutputType>WinExe</OutputType>
@@ -25,7 +25,7 @@
   
   <PropertyGroup Condition="$(Configuration.Contains('Stereo'))">
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
-	<Version>1.0.0-alpha.31</Version>
+	<Version>1.0.0-beta.1</Version>
 	<DefineConstants>$(DefineConstants);STEREO;HACKATHON</DefineConstants>
   </PropertyGroup>
 
@@ -100,6 +100,12 @@
 	<None Update="Content\Animations\**\*.svg">
 		<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	</None>
+  </ItemGroup>
+  
+  <ItemGroup>
+    <Content Include="Content\Shaders\*.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
