--- a/GameClient/GameClient_Windows.csproj
+++ b/GameClient/GameClient_Windows.csproj
@@ -1,9 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <AssemblyName>GameClient</AssemblyName>
 	<AssemblyVersion>1.3.0.0</AssemblyVersion>
-	<Version>1.3.0-beta.5</Version>
+	<Version>1.3.0</Version>
 	<Deterministic>false</Deterministic>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
@@ -28,7 +28,7 @@
   
   <PropertyGroup Condition="$(Configuration.Contains('Stereo'))">
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
-	<Version>1.0.0-beta.5</Version>
+	<Version>1.0.0</Version>
 	<DefineConstants>$(DefineConstants);STEREO;HACKATHON</DefineConstants>
   </PropertyGroup>
 
