--- a/GameServer/GameServer_Linux.csproj
+++ b/GameServer/GameServer_Linux.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <AssemblyName>GameServer</AssemblyName>
 	<AssemblyVersion>1.3.0.0</AssemblyVersion>
-	<Version>1.3.0-beta.5</Version>
+	<Version>1.3.0</Version>
 	<Deterministic>false</Deterministic>
     <RootNamespace>GameServer</RootNamespace>
     <OutputType>Exe</OutputType>
@@ -25,7 +25,7 @@
   
   <PropertyGroup Condition="$(Configuration.Contains('Stereo'))">
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
-	<Version>1.0.0-beta.5</Version>
+	<Version>1.0.0</Version>
 	<DefineConstants>$(DefineConstants);STEREO;HACKATHON</DefineConstants>
   </PropertyGroup>
   
