--- a/GameServer/Properties/launchSettings.json
+++ b/GameServer/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "GameServer_Windows": {
-      "commandName": "Project",
-      "commandLineArgs": "--host *"
+      "commandName": "Project"
     }
   }
 }
